--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "php": ">=5.5.9",
         "illuminate/support": "5.2.*",
         "illuminate/database": "5.2.*",
-        "league/fractal": "^0.13.0",
+        "league/fractal": "^0.13.0"
     },
 
     "autoload": { 
